--- a/MaintenanceDashbord.Common/app.config
+++ b/MaintenanceDashbord.Common/app.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="MaintenanceDashbord.Common.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="MaintenanceDashboard.Common.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -8,4 +16,30 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <MaintenanceDashbord.Common.Properties.Settings>
+      <setting name="RobotToolInspectionInterval" serializeAs="String">
+        <value>160</value>
+      </setting>
+      <setting name="PaddleInspectionInterval" serializeAs="String">
+        <value>160</value>
+      </setting>
+      <setting name="ThermostatWashInterval" serializeAs="String">
+        <value>30</value>
+      </setting>
+    </MaintenanceDashbord.Common.Properties.Settings>
+  </applicationSettings>
+  <userSettings>
+    <MaintenanceDashboard.Common.Settings>
+      <setting name="RobotToolInspectionInterval" serializeAs="String">
+        <value>160</value>
+      </setting>
+      <setting name="PaddleInspectionInterval" serializeAs="String">
+        <value>160</value>
+      </setting>
+      <setting name="ThermostatWashInterval" serializeAs="String">
+        <value>30</value>
+      </setting>
+    </MaintenanceDashboard.Common.Settings>
+  </userSettings>
 </configuration>
